# BatchPing

./: CMakeLists.txt  README.md  main.cpp
masspinger/: Host.cpp  Host.h  PingManager.h  Pinger.cpp  Pinger.h
